force-app/main/default/objects/Ordering_Event__c/Ordering_Event__c.object-meta.xml
<CustomObject>
    <description
    >Used to store and manage ordering events and pre-season ordering.  Record types will be used to allow flexibility in setting up events and pre-season events</description>
    <label>Ordering Event</label>
    <nameField>
        <label>Ordering Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordering Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>