force-app/main/default/objects/Ordering_Event__c/fields/Allow_Multiple_Orders__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Multiple Orders Per Location (Ship To)</description>
    <label>Allow Multiple Orders</label>
    <type>Checkbox</type>
</CustomField>