force-app/main/default/objects/Ordering_Event__c/fields/Display_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Display_Gross_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Gross Margin</label>
    <type>Checkbox</type>
</CustomField>