force-app/main/default/objects/Ordering_Event__c/fields/Display_Term_Option__c.field-meta.xml
<CustomField>
    <fullName>Display_Term_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Term Option</label>
    <type>Checkbox</type>
</CustomField>