force-app/main/default/objects/Ordering_Event__c/fields/Display_Tier_Info__c.field-meta.xml
<CustomField>
    <fullName>Display_Tier_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Event pricing must be set as &apos;Tier&apos; for this to be a valid option</description>
    <label>Display Tier Info</label>
    <type>Checkbox</type>
</CustomField>