force-app/main/default/objects/Ordering_Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>required when event becomes active</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>