force-app/main/default/objects/Ordering_Event__c/fields/ERP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Company_Code__c</fullName>
    <description>e.g. 38 IR-USA Whole Goods, 52 IR-USA Parts  -  ToFuture:  expose on layouts and grant FLS to business profiles &amp; perm sets</description>
    <inlineHelpText>e.g. 38 IR-USA Whole Goods, 52 IR-USA Parts</inlineHelpText>
    <label>COM Company Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>