force-app/main/default/objects/Ordering_Event__c/fields/Event_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Event_Pricing__c</fullName>
    <label>Event Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier</fullName>
            </value>
            <value>
                <fullName>Current Level</fullName>
            </value>
            <value>
                <fullName>Future Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>