force-app/main/default/objects/Ordering_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring/Summer</fullName>
            </value>
            <value>
                <fullName>Fall/Winter</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Real Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>