force-app/main/default/objects/Ordering_Event__c/fields/Excluded_Dealer_Types__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Dealer_Types__c</fullName>
    <description>Dealer Types specify the the brands/products a retailer can sell.</description>
    <inlineHelpText>Choose dealers to exclude from this ordering-event.  You do NOT need to exclude types for other ordering regions.</inlineHelpText>
    <label>Excluded Dealer Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Dealer_Types</valueSetName>
    </valueSet>
</CustomField>