force-app/main/default/objects/Ordering_Event__c/fields/Excluded_Territories__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Territories__c</fullName>
    <description
    >2022-09 Diane Blouch/Robyn Jordan requested that the PES Dealers (west coast; who buy product for their floor from the PES Distribution) be excluded from in season ordering.</description>
    <label>Excluded Territories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Territories</valueSetName>
    </valueSet>
</CustomField>