force-app/main/default/objects/Ordering_Event__c/fields/Fixed_Promotion_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Promotion_Price__c</fullName>
    <description>Fixed price for all products in the event</description>
    <label>Fixed Promotion Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>