force-app/main/default/objects/Ordering_Event__c/fields/Hide_Availability_Alert__c.field-meta.xml
<CustomField>
    <fullName>Hide_Availability_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, availability alerts will not be shown when adding more products that available to all orders in an event.</description>
    <label>Hide Availability Alert</label>
    <type>Checkbox</type>
</CustomField>