force-app/main/default/objects/Ordering_Event__c/fields/Included_Regions__c.field-meta.xml
<CustomField>
    <fullName>Included_Regions__c</fullName>
    <description
    >IR-USA configures its Sales Regions as territories throughout the USA.  The West Coast is mostly managed by an external Sales Firm called PES (Power Equipment Supply).</description>
    <inlineHelpText>Which Sales Regions/Territories should be included in this ordering event?</inlineHelpText>
    <label>Included Sales Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>