force-app/main/default/objects/Ordering_Event__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability to turn the event on or off</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>