force-app/main/default/objects/Ordering_Event__c/fields/JSON_PK__c.field-meta.xml
<CustomField>
    <fullName>JSON_PK__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JSON PK</label>
    <type>Text</type>
</CustomField>