force-app/main/default/objects/Ordering_Event__c/fields/Ordering_Regions__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Regions__c</fullName>
    <inlineHelpText>choose countries/regions participating in this event</inlineHelpText>
    <label>Ordering Regions</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>