force-app/main/default/objects/Ordering_Event__c/fields/PO_Prefix__c.field-meta.xml
<CustomField>
    <fullName>PO_Prefix__c</fullName>
    <description>P.O. Number prefix gets sent to COMS for each preseason order, COMS handles the auto incrementing</description>
    <label>PO Prefix</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>