force-app/main/default/objects/Ordering_Event__c/fields/Price_Book_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Level 1</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Ordering Events</relationshipLabel>
    <relationshipName>Ordering_Events</relationshipName>
    <type>Lookup</type>
</CustomField>