force-app/main/default/objects/Ordering_Event__c/fields/Price_Book_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Level 2</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Ordering Events (Price Book Level 2)</relationshipLabel>
    <relationshipName>Ordering_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>