force-app/main/default/objects/Ordering_Event__c/fields/Price_Book_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Level_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Level 3</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Ordering Events (Price Book Level 3)</relationshipLabel>
    <relationshipName>Ordering_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>