force-app/main/default/objects/Ordering_Event__c/fields/Price_Book_Retail__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Retail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Retail</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Ordering Events (Price Book Retail)</relationshipLabel>
    <relationshipName>Ordering_Events7</relationshipName>
    <type>Lookup</type>
</CustomField>