force-app/main/default/objects/Ordering_Event__c/fields/Promotion_Description__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Description__c</fullName>
    <description>This description is displayed to the dealer on the order form for Promotion orders.</description>
    <label>Promotion Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>