force-app/main/default/objects/Ordering_Event__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Per Product</fullName>
                <isActive>false</isActive>
                <label>Per Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>