force-app/main/default/objects/Ordering_Event__c/fields/Shipping_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date_Format__c</fullName>
    <label>Shipping Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Month/Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>