force-app/main/default/objects/Ordering_Event__c/fields/Source_PK__c.field-meta.xml
<CustomField>
    <fullName>Source_PK__c</fullName>
    <label>Source PK</label>
    <length>48</length>
    <type>Text</type>
</CustomField>