force-app/main/default/objects/Ordering_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>A required field to at the time the event is made active</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>