force-app/main/default/objects/Ordering_Event__c/fields/Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Term_Code__c</fullName>
    <label>Term Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>FH</fullName>
            </value>
            <value>
                <fullName>FM</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>F9</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>