force-app/main/default/objects/Ordering_Event__c/fields/Territory_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Territory_Alignment__c</fullName>
    <label>Territory Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>