force-app/main/default/objects/Ordering_Event__c/fields/Tier_2_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Minimum__c</fullName>
    <label>Tier 2 Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>