force-app/main/default/objects/Ordering_Event__c/fields/Tier_4_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Tier_4_Minimum__c</fullName>
    <label>Tier 4 Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>