force-app/main/default/objects/Ordering_Event__c/fields/Who_Can_Order__c.field-meta.xml
<CustomField>
    <fullName>Who_Can_Order__c</fullName>
    <description>restriction to control access to promotional events</description>
    <label>Who Can Order?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>