force-app/main/default/objects/Ordering_Event__c/recordTypes/In_Season.recordType-meta.xml
<RecordType>
    <fullName>In_Season</fullName>
    <active>true</active>
    <label>In-Season</label>
</RecordType>