force-app/main/default/objects/Ordering_Event__c/recordTypes/Pre_Season.recordType-meta.xml
<RecordType>
    <fullName>Pre_Season</fullName>
    <active>true</active>
    <label>Pre-Season Spring/Summer</label>
</RecordType>