force-app/main/default/objects/Ordering_Event__c/recordTypes/Pre_Season_Fall_Winter.recordType-meta.xml
<RecordType>
    <fullName>Pre_Season_Fall_Winter</fullName>
    <active>true</active>
    <label>Pre-Season Fall/Winter</label>
</RecordType>