force-app/main/default/objects/Ordering_Event__c/validationRules/Choose_Ordering_Region_Canada_or_USA.validationRule-meta.xml
<ValidationRule>
    <fullName>Choose_Ordering_Region_Canada_or_USA</fullName>
    <active>true</active>
    <description>choose either Canada or USA -- not both</description>
    <errorConditionFormula>IF(AND(INCLUDES(Ordering_Regions__c, &apos;Canada&apos;) 
       , INCLUDES(Ordering_Regions__c, &apos;USA&apos;)
       )
, true
, false
)</errorConditionFormula>
    <errorDisplayField>Ordering_Regions__c</errorDisplayField>
    <errorMessage>choose either Canada or USA -- not both</errorMessage>
</ValidationRule>