force-app/main/default/objects/Ordering_Event__c/validationRules/Negative_Promotion_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Promotion_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Fixed_Promotion_Price__c &lt; 0</errorConditionFormula>
    <errorMessage>Promotion Price cannot be negative</errorMessage>
</ValidationRule>