force-app/main/default/objects/Ordering_Event__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>Ordering_Regions__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event_Type__c</columns>
    <columns>Promotion_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Closed__c</columns>
    <columns>Event_Pricing__c</columns>
    <columns>Territory_Alignment__c</columns>
    <columns>PO_Prefix__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrators</group>
        <group>System_Triagers</group>
    </sharedTo>
</ListView>