force-app/main/default/objects/Ordering_Event__c/listViews/In_Season_Events.listView-meta.xml
<ListView>
    <fullName>In_Season_Events</fullName>
    <columns>Ordering_Regions__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ordering_Event__c.In_Season</value>
    </filters>
    <label>In-Season Events</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrators</group>
        <group>System_Triagers</group>
    </sharedTo>
</ListView>