force-app/main/default/objects/Ordering_Event__c/listViews/Pre_Season_Events.listView-meta.xml
<ListView>
    <fullName>Pre_Season_Events</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Ordering_Regions__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>PO_Prefix__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ordering_Event__c.Pre_Season</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ordering_Event__c.Pre_Season_Fall_Winter</value>
    </filters>
    <label>Pre-Season Events</label>
    <language>en_US</language>
</ListView>