force-app/main/default/objects/Ordering_Event__c/listViews/Promotion_Events.listView-meta.xml
<ListView>
    <fullName>Promotion_Events</fullName>
    <columns>Ordering_Regions__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event_Type__c</columns>
    <columns>Promotion_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>PO_Prefix__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ordering_Event__c.Promotion</value>
    </filters>
    <label>Promotion Events</label>
    <language>en_US</language>
</ListView>